# synthia

./: .envrc  .gitignore  Dockerfile  README.md  flake.nix  launch.sh  pyproject.toml
.github/: build-docker.yaml
env/: anthropic.env.sample  config.env.sample  openai.env.sample
src/synthia/: __init__.py  cli.py  utils.py
src/synthia/db/: README.md  server.py  test.py
src/synthia/miner/: BaseLLM.py  _config.py  anthropic.py  cli.py  deep_mistral.py  mistral.py  openai.py
src/synthia/tests/: call_miner.py  clasifier.py  connection.py  cutweight.py  distribution.py  vote.py
src/synthia/validator/: _config.py  generate_data.py  math.py  meta_prompt.py  sigmoid.py  similarity.py  text_validator.py  validator.py
