[tool.poetry]
name = "synthia"
version = "0.1.0"
description = "CommuneX Validators"
authors = ["supreme <zimulajan0@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
anthropic = "^0.21.3"
openai = "^1.14.2"
communex = "^0.1.6"
polars = "^0.20.16"
polars-distance = "^0.4.2"
gensim = "^4.3.2"
pot = "^0.9.3"
numpy = "^1.26.4"
# classifiers ML
transformers = "^4.39.1"
tensorflow = "^2.16.1"
tf-keras = "^2.16.0"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.25.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
isort = "^5.13.2"

[tool.poetry.group.huggingface]
optional = true

[tool.poetry.group.huggingface.dependencies]
transformers = "^4.39.1"
huggingface_hub = "^0.19.3"
python-multipart = "^0.0.5"
datasets = "^1.14.0"
slowapi = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
strict = ["src"]
# reportUnusedVariable = "warning"